Page d'acceuil cyborg okay

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,19 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/assets/bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/assets/style.css" media="screen" title="no title" charset="utf-8">
-
     <title>Cyborg</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row text-center">
+    <div class="main">
         <h1>Bienvenue sur Cyborg</h1>
-          <input type="text" class="form-control input-lg" placeholder="Text input">
-      </div>
+        <input type="text" class="form-control input-lg" placeholder="Entrez votre nom">
+        <br>
+        <br>
+        <button type="button" name="button">OK</button>
     </div>
-
-
   </body>
 </html>
