Ajout de 2 pages de vues

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -11,7 +11,7 @@
         <input type="text" class="form-control input-lg" placeholder="Entrez votre nom">
         <br>
         <br>
-        <button type="button" name="button">OK</button>
+        <a href="choix.html"><button type="button" name="button">OK</button></a>
     </div>
   </body>
 </html>
