--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,16 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/assets/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/static/css/style.css" media="screen" title="no title" charset="utf-8">
+    <script src="/static/js/socket.io.js" charset="utf-8"></script>
     <title>Cyborg</title>
   </head>
   <body>
     <div class="main">
         <h1>Bienvenue sur Cyborg</h1>
-        <input type="text" class="form-control input-lg" placeholder="Entrez votre nom">
-        <br>
-        <br>
-        <a href="choix.html"><button type="button" name="button">OK</button></a>
+        <form class="" action="choix" method="post">
+          <input type="text" name="playerName" class="form-control input-lg" placeholder="Entrez votre nom">
+          <br>
+          <br>
+          <button type="submit">OK</button>
+        </form>
     </div>
   </body>
+  <script>
+    var socket = io('http://localhost:8080');
+    // socket.on('news', function (data) {
+    //   console.log(data);
+    //   socket.emit('my other event', { my: 'data' });
+    // });
+  </script>
 </html>
