--- a/src/client/newgame.html
+++ b/src/client/newgame.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/assets/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/static/css/style.css" media="screen" title="no title" charset="utf-8">
     <title>Nouvelle partie</title>
   </head>
   <body>
