Welcome page; change name; count player

--- a/src/client/chooseGame.html
+++ b/src/client/chooseGame.html
@@ -9,7 +9,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Choisis un jeu <span id="playerName"></span> : </h1>
+    <h1 style="font-size: 150%;">Choisis un jeu <span id="playerName"></span> : </h1>
   </body>
   <script type="text/javascript">
     // On accede à l'objet player en cours grace à : window.parent.player
