--- a/src/client/welcome.html
+++ b/src/client/welcome.html
@@ -10,11 +10,13 @@
     <title></title>
   </head>
   <body>
-    <h1>Bienvenue sur Cyborg</h1>
-    <input type="text" id="playerNameInput" class="form-control input-lg" placeholder="Entrez votre nom">
-    <br>
-    <br>
-    <a id="changeName" href="chooseGame" target="_self"><img src="/static/img/ok.png" alt="" /></a>
+    <div style="padding-top:3em">
+        <input type="text" id="playerNameInput" class="form-control input-lg" placeholder="Entrez votre nom">
+    </div>
+    <div style="padding-top:2em">
+          <a id="changeName" href="chooseGame" target="_self"><img src="/static/img/ok.png" alt="" /></a>
+    </div>
+
   </body>
   <script type="text/javascript">
     // On accede à l'objet player en cours grace à : window.parent.player
@@ -23,10 +25,19 @@
     jQuery('#changeName').click(function () {
       //Get player name
       var playerName = jQuery('#playerNameInput').val();
+
+      //Send name to server
+      if(!player.name){
+        player.socket.emit('newName', playerName);
+      }else{
+        console.log(player.name,playerName);
+        var oldName = player.name;
+        player.socket.emit('changeName', {old:oldName , new:playerName });
+      }
+
       //Save locally
       player.name = playerName.toString();
-      //Send name to server
-      player.socket.emit('presentation', playerName);
+
 
     });
 
