--- a/src/client/base.html
+++ b/src/client/base.html
@@ -26,9 +26,7 @@
       <ul>
         <li> <a href="#home"><img src="static/img/gears.svg"   alt="settings" /></a></li>
         <li> <a href="#news"><img src="static/img/speaker.svg"  alt="sound" /></a></li>
-        <li id="numberOfPlayer">
-          4
-        </li>
+        <li id="numberOfPlayer"></li>
         <li style="float:right">
           <img src="static/img/cyborg-face.svg" alt="number of player" />
         </li>
@@ -44,6 +42,9 @@
         <p>Sorry, your browser does not support iframes. You can't use Cyborg for the moment :s Pieg.</p>
       </iframe>
     </section>
+    <footer id="annonce">
+      Bienvenue sur Cyborg !
+    </footer>
 
   </body>
   <script type="text/javascript">
@@ -60,5 +61,12 @@
   player.socket.on('annonce', function (val) {
     $('#annonce').html(val);
   });
+
+  player.socket.on('numberOfPlayer', function (val) {
+    $('#numberOfPlayer').html(val);
+  });
+
+
+
   </script>
 </html>
