--- a/src/client/cyborg.html
+++ b/src/client/cyborg.html
@@ -62,7 +62,7 @@
 
     <div id="main" class="pure-g">
         <div class="pure-u-1-1 main">
-            <iframe id="mainFrame" class="main" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" src="http://localhost:3001/welcome" seamless="">
+            <iframe src="welcome/home" id="mainFrame" class="main" sandbox="allow-forms allow-scripts allow-same-origin allow-top-navigation" >
               <p>Sorry, your browser does not support iframes. You can't use Cyborg for the moment :s Pieg.</p>
             </iframe>
         </div>
@@ -143,6 +143,8 @@
   cyborg.socket.on('numberOfPlayer', function (val) {
     $('#numberOfPlayer').html(val);
   });
+
+
 
 
 
